log
Sat, Mar 22, 2025  3:56:21 PM: 
 exercises.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:64:10: error: assignment to 'int' from 'void *' makes integer from pointer without a cast [-Werror=int-conversion]
   64 |    valor = first(L);
      |          ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:10: error: assignment to 'int' from 'void *' makes integer from pointer without a cast [-Werror=int-conversion]
   85 |    valor = first(L);
      |          ^
exercises.c:91:11: error: 'return' with a value, in function returning void [-Werror=return-type]
   91 |    return 0;
      |           ^
exercises.c:82:6: note: declared here
   82 | void eliminaElementos(List*L, int elem)
      |      ^~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4829cc2
Sat, Mar 22, 2025  3:59:04 PM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:64:10: error: assignment to 'int' from 'void *' makes integer from pointer without a cast [-Werror=int-conversion]
   64 |    valor = first(L);
      |          ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:12: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   85 |    valor = (int)first(L);
      |            ^
cc1.exe: all warnings being treated as errors
Compilation failed
5cbff0c
